<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/changelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changelabel"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/changenamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changenamelabel"
        app:layout_constraintTop_toBottomOf="@id/changelabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10sp"/>
    <EditText
        android:id="@+id/changename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/changelabel"
        app:layout_constraintLeft_toRightOf="@id/changenamelabel"
        android:inputType="text"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/changegenderlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changegenderlabel"
        app:layout_constraintTop_toBottomOf="@id/changenamelabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/groupgender"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10sp"/>

    <RadioGroup
        android:id="@+id/groupgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/changegenderlabel"
        app:layout_constraintLeft_toRightOf="@id/changegenderlabel">
        <RadioButton
            android:id="@+id/gendermale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:textSize="25sp"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/genderfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:textSize="25sp"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/gendersecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:textSize="25sp"
            android:text="@string/secret"/>
    </RadioGroup>
    <TextView
        android:id="@+id/changecontentlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changegenderlabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="30sp"
        android:layout_margin="10sp"
        android:text="@string/changecontentlabel"/>
    <EditText
        android:id="@+id/changecontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changecontentlabel"
        android:textSize="26sp"
        android:layout_weight="3"
        android:background="@drawable/selftextborder"
        android:lines="8"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_margin="10sp"/>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20sp">
    <Button
        android:id="@+id/changeconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/confirm"
        android:layout_marginRight="35sp"/>
    <Button
        android:id="@+id/changecancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/cancel"
        android:layout_marginLeft="35sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>