<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/uply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titlelayout">
        <TextView
            android:id="@+id/showaddtime"
            android:layout_margin="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/addtimedefault"
            android:gravity="center" />
        <Button
            android:id="@+id/goback"
            android:layout_margin="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/uply">
        <TextView
            android:id="@+id/costlabel"
            android:textSize="20sp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paycoatlabel"/>
        <EditText
            android:id="@+id/addcost"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/money"
            android:maxLines="1"
            android:inputType="text"/>
    </LinearLayout>
    <com.wx.wheelview.widget.WheelView
        android:id="@+id/wheelview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toBottomOf="@id/titlelayout"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"/>
    <Button
        android:id="@+id/confirmadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toBottomOf="@id/wheelview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>