<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/maindata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/tabtextborder"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/headimg"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:src="@drawable/eugen01"
            app:civ_border_color="@color/headimgborder"
            app:civ_border_overlay="false"
            app:civ_border_width="3dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namedefault"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genderdefault" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:hint="@string/contentdefault" />

        </LinearLayout>

        <Button
            android:id="@+id/selfinfochange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/selfinfo" />
    </LinearLayout>

    <TextView
        android:id="@+id/comm_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addpwdlabel"
        app:layout_constraintTop_toBottomOf="@id/maindata"
        app:layout_constraintBottom_toTopOf="@id/communicationscroll"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10sp"/>

    <ScrollView
        android:id="@+id/communicationscroll"
        android:layout_width="match_parent"
        android:layout_height="500sp"
        app:layout_constraintTop_toBottomOf="@id/comm_label"
        android:layout_marginBottom="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">
        <com.demo.lifeconvenientdesign.RecyclerList.MyList
            android:id="@+id/communication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/maindata" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>